--- a/.env
+++ b/.env
@@ -9,11 +9,11 @@ LOG_CHANNEL=stack
 LOG_SLACK_WEBHOOK_URL=
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=dbgateway
+DB_HOST=switchback.proxy.rlwy.net
+DB_PORT=40753
+DB_DATABASE=railway
 DB_USERNAME=root
-DB_PASSWORD=User1234
+DB_PASSWORD=KkzLUEvOppdaGYqZUnhDWHRZErsSImpm
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
