--- a/.env
+++ b/.env
@@ -9,11 +9,11 @@ LOG_CHANNEL=stack
 LOG_SLACK_WEBHOOK_URL=
 
 DB_CONNECTION=mysql
-DB_HOST=switchback.proxy.rlwy.net
-DB_PORT=40753
+DB_HOST=caboose.proxy.rlwy.net
+DB_PORT=54275
 DB_DATABASE=railway
 DB_USERNAME=root
-DB_PASSWORD=KkzLUEvOppdaGYqZUnhDWHRZErsSImpm
+DB_PASSWORD=pKreBQFATXDfeVZalEQMKwSlzoTFXCNZ
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
