--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Lumen
 APP_ENV=local
 APP_KEY=lSGup8zugynZiCm8ao2QzE1AW1rkkJpA
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://ddsbeapigateway-production-3daa.up.railway.app/
 APP_TIMEZONE=UTC
 
 LOG_CHANNEL=stack
@@ -18,8 +18,8 @@ DB_PASSWORD=pKreBQFATXDfeVZalEQMKwSlzoTFXCNZ
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 
-USERS1_SERVICE_BASE_URL=localhost:8000
-USERS2_SERVICE_BASE_URL=localhost:8001
+USERS1_SERVICE_BASE_URL=https://ddsbesite1-production.up.railway.app
+USERS2_SERVICE_BASE_URL=https://ddsbesite2-production-4cbe.up.railway.app
 
 
 
